fixed nav bar covering twitter btn. Moved Mobile close btn X to aliegn with nav items

--- a/css/nav.css
+++ b/css/nav.css
@@ -539,8 +539,8 @@ footer[role="contentinfo"] {
   }
   #nav .close-btn {
     position: absolute;
-    top: -3.6em;
-    left: .7em;
+    top: -3.3em;
+    left: 21.6px;
     background-color: none !important;
   }
   #nav .block {
